@@ -8,7 +8,7 @@
 ;; Franz Incorporated provides this software "as is" without
 ;; express or implied warranty.
 
-;; $Header: /repo/cvs.copy/eli/fi-su.el,v 1.13 1993/07/23 03:49:20 layer Exp $
+;; $Header: /repo/cvs.copy/eli/fi-su.el,v 1.14 1996/06/05 20:31:51 layer Exp $
 
 (defvar fi:su-mode-map nil
   "The su major-mode keymap.")
@@ -47,7 +47,7 @@ When calling from a program, argument is MODE-HOOK,
 which is funcall'd just after killing all local variables but before doing
 any other mode setup."
   (interactive)
-  (kill-all-local-variables)
+  (fi::kill-all-local-variables)
   (if mode-hook (funcall mode-hook))
   (setq major-mode 'fi:su-mode)
   (setq mode-name "Su")
