@@ -10,7 +10,7 @@
 ;; Franz Incorporated provides this software "as is" without
 ;; express or implied warranty.
 ;;
-;; $Header: /repo/cvs.copy/eli/fi-xemacs.el,v 2.4 1996/06/04 20:48:14 layer Exp $
+;; $Header: /repo/cvs.copy/eli/fi-xemacs.el,v 2.5 1996/06/05 20:31:54 layer Exp $
 
 (defun fi-find-buffer-visiting (filename)
   (get-file-buffer filename))
@@ -261,7 +261,8 @@
     (fi::install-menubar fi:allegro-edit-menu)
     (fi::install-menubar fi:allegro-debug-menu)
     (fi::install-menubar fi:allegro-help-menu)
-    (when fi:composer-menu (fi::install-menubar fi:composer-menu))))
+    (when (and fi:composer-menu (not (on-ms-windows)))
+      (fi::install-menubar fi:composer-menu))))
 
 (defvar fi::menubar-initialization)
 (setq fi::menubar-initialization
