@@ -1,3 +1,8 @@
+Wed Jun 05 13:30:38 1996    <layer@hobart.franz.com>
+
+	* fi-xemacs.el:
+	* fi-emacs19.el: don't put composer on menubar on Windows
+
 Tue Jun  4 13:47:26 1996  Kevin Layer  <layer@freezer>
 
 	* fi-xemacs.el: define find-buffer-visiting, used by fi-changes.el
